# FIT_IVS_PROJECT2

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeLists.txt.in  CrExample.cpp  README.md  _2media_2_linux__data_2_code_2school_2_f_i_t__i_v_s__p_r_o_j_e_c_t2_2src_2_interpret_8h-example.html  _equation_8cpp.html  _equation_8cpp__incl.map  _equation_8cpp__incl.md5  _equation_8cpp_source.html  _equation_8h.html  _equation_8h__dep__incl.map  _equation_8h__dep__incl.md5  _equation_8h__incl.map  _equation_8h__incl.md5  _equation_8h_source.html  _equation_observer_8h.html  _equation_observer_8h__dep__incl.map  _equation_observer_8h__dep__incl.md5  _equation_observer_8h_source.html  _f_i_t___i_v_s___p_r_o_j_e_c_t2_2src_2_equation_8cpp.html  _f_i_t___i_v_s___p_r_o_j_e_c_t2_2src_2_equation_8cpp__incl.map  _f_i_t___i_v_s___p_r_o_j_e_c_t2_2src_2_equation_8cpp__incl.md5  _f_i_t___i_v_s___p_r_o_j_e_c_t2_2src_2_equation_8cpp_source.html  _f_i_t___i_v_s___p_r_o_j_e_c_t2_2src_2_equation_8h.html  _f_i_t___i_v_s___p_r_o_j_e_c_t2_2src_2_equation_8h__dep__incl.map  _f_i_t___i_v_s___p_r_o_j_e_c_t2_2src_2_equation_8h__dep__incl.md5  _f_i_t___i_v_s___p_r_o_j_e_c_t2_2src_2_equation_8h__incl.map  _f_i_t___i_v_s___p_r_o_j_e_c_t2_2src_2_equation_8h__incl.md5  _f_i_t___i_v_s___p_r_o_j_e_c_t2_2src_2_equation_8h_source.html  _f_i_t___i_v_s___p_r_o_j_e_c_t2_2src_2_equation_observer_8h.html  _f_i_t___i_v_s___p_r_o_j_e_c_t2_2src_2_equation_observer_8h__dep__incl.map  _f_i_t___i_v_s___p_r_o_j_e_c_t2_2src_2_equation_observer_8h__dep__incl.md5  _f_i_t___i_v_s___p_r_o_j_e_c_t2_2src_2_equation_observer_8h_source.html  _f_i_t___i_v_s___p_r_o_j_e_c_t2_2src_2_interpret_8cpp.html  _f_i_t___i_v_s___p_r_o_j_e_c_t2_2src_2_interpret_8cpp__incl.map  _f_i_t___i_v_s___p_r_o_j_e_c_t2_2src_2_interpret_8cpp__incl.md5  _f_i_t___i_v_s___p_r_o_j_e_c_t2_2src_2_interpret_8cpp_source.html  _f_i_t___i_v_s___p_r_o_j_e_c_t2_2src_2_interpret_8h.html  (+821 more)
build-src-Desktop-Ladění/: Calc  Makefile  moc_SignalManager.cpp  qrc_qml.cpp
plan/: xcecha04_xmatla00_xmitur01_xslade21_plan.d  xcecha04_xmatla00_xmitur01_xslade21_plan.md
profiling/: Makefile  Number.h  filegen.cpp  profiling.cpp  vstup10.txt  vstup100.txt  vstup1000.txt  zprava.txt
search/: all_0.html  all_0.js  all_1.html  all_1.js  all_10.html  all_10.js  all_11.html  all_11.js  all_12.html  all_12.js  all_13.html  all_13.js  all_14.html  all_15.html  all_15.js  all_16.html  all_16.js  all_2.html  all_2.js  all_3.html  all_3.js  all_4.html  all_4.js  all_5.html  all_5.js  all_6.html  all_7.html  all_7.js  all_8.html  all_8.js  all_9.html  all_9.js  all_a.html  all_a.js  all_b.html  all_b.js  all_c.html  all_c.js  all_d.html  all_d.js  (+149 more)
src/: BackendManager.cpp  Button.qml  Doxyfile  Equation.cpp  Equation.h  EquationObserver.h  Interpret.cpp  Interpret.h  InterpretException.h  InterpretTest  Lex.cpp  Lex.h  LexException.h  LexIdentificationObserver.h  LexicalAnalyzer.cpp  LexicalAnalyzer.h  LexicalAnalyzerException.h  MakeTests  MakeTests.mk  Makefile  ResultObserver.h  SignalManager.cpp  SignalManager.h  constants.js  install_dep.sh  main.cpp  main.qml  qml.qrc  qrc_qml.cpp  src  src.pro  src.pro.user.7e89f6a
src/dokumentacce/: Doxyfile
src/dokumentacce/html/: _2root_2_documents_2_git_clone_2_f_i_t__i_v_s__p_r_o_j_e_c_t2_2src_2_interpret_8h-example.html  _equation_8cpp.html  _equation_8cpp__incl.map  _equation_8cpp__incl.md5  _equation_8cpp_source.html  _equation_8h.html  _equation_8h__dep__incl.map  _equation_8h__dep__incl.md5  _equation_8h__incl.map  _equation_8h__incl.md5  _equation_8h_source.html  _equation_observer_8h.html  _equation_observer_8h__dep__incl.map  _equation_observer_8h__dep__incl.md5  _equation_observer_8h_source.html  _interpret_8cpp.html  _interpret_8cpp__incl.map  _interpret_8cpp__incl.md5  _interpret_8cpp_source.html  _interpret_8h.html  _interpret_8h__dep__incl.map  _interpret_8h__dep__incl.md5  _interpret_8h__incl.map  _interpret_8h__incl.md5  _interpret_8h_source.html  _interpret_exception_8h.html  _interpret_exception_8h__dep__incl.map  _interpret_exception_8h__dep__incl.md5  _interpret_exception_8h_source.html  _interpret_tests_8cpp.html  _interpret_tests_8cpp.js  _interpret_tests_8cpp__incl.map  _interpret_tests_8cpp__incl.md5  _interpret_tests_8cpp_source.html  _lex_8cpp.html  _lex_8cpp__incl.map  _lex_8cpp__incl.md5  _lex_8cpp_source.html  _lex_8h.html  _lex_8h__dep__incl.map  (+194 more)
src/dokumentacce/latex/: _2root_2_documents_2_git_clone_2_f_i_t__i_v_s__p_r_o_j_e_c_t2_2src_2_interpret_8h-example.tex  _equation_8cpp.tex  _equation_8cpp__incl.md5  _equation_8h.tex  _equation_8h__dep__incl.md5  _equation_8h__incl.md5  _equation_observer_8h.tex  _equation_observer_8h__dep__incl.md5  _interpret_8cpp.tex  _interpret_8cpp__incl.md5  _interpret_8h.tex  _interpret_8h__dep__incl.md5  _interpret_8h__incl.md5  _interpret_exception_8h.tex  _interpret_exception_8h__dep__incl.md5  _interpret_tests_8cpp.tex  _interpret_tests_8cpp__incl.md5  _lex_8cpp.tex  _lex_8cpp__incl.md5  _lex_8h.tex  _lex_8h__dep__incl.md5  _lex_8h__incl.md5  _lex_exception_8h.tex  _lex_exception_8h__dep__incl.md5  _lex_exception_8h__incl.md5  _lex_identification_observer_8h.tex  _lex_identification_observer_8h__dep__incl.md5  _lex_identification_observer_8h__incl.md5  _lexical_analyzer_8cpp.tex  _lexical_analyzer_8cpp__incl.md5  _lexical_analyzer_8h.tex  _lexical_analyzer_8h__dep__incl.md5  _lexical_analyzer_8h__incl.md5  _lexical_analyzer_exception_8h.tex  _lexical_analyzer_exception_8h__dep__incl.md5  _lexical_analyzer_exception_8h__incl.md5  _lexical_analyzer_test_8cpp.tex  _lexical_analyzer_test_8cpp__incl.md5  _number_8cpp.tex  _number_8cpp__incl.md5  (+82 more)
src/dokumentace/: Preklad_na_Ubuntu.markdown  Překlad_na_Ubuntu.markdown
src/install/: Calc.desktop  install_dep.sh  uinstall.sh
src/math/: Number.cpp  Number.h  UndefinedException.h  UndefinedExeption.h
src/profiling/: Makefile  filegen.cpp  profiling.cpp
src/resources/: Button.qml  constants.js  main.qml
src/tests/: InterpretTests.cpp  LexicalAnalyzerTest.cpp  NumberTest.cpp  TestConstants.h  TestContants.h  backendTest.cpp
(+636 files in other folders)
